# Rhex_Development

./: .gitignore  README.md  run_gui.sh  run_supervisor.sh
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/activity_2/: package.xml  setup.cfg  setup.py
src/activity_2/activity_2/: number_counter.py  number_publisher.py
src/control_server/: CMakeLists.txt  package.xml
src/control_server/launch/: start_controller_server.launch.py  start_sim.launch.py
src/get_image/: README.md  package.xml  setup.py
src/get_image/get_image/: ar_point.py  mark_point.py  obtain_image.py  obtain_pointcloud.py
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_node.py  robot_news_station.py  smartphone.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: number_app.launch.py
src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  pose_subscriber.py
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: my_robot.urdf  my_robot.urdf.xacro
src/rhex_bringup/: CMakeLists.txt  package.xml
src/rhex_bringup/launch/: bringup_simulation.launch.py
src/rhex_control/: package.xml  setup.cfg  setup.py
src/rhex_control/rhex_control/: dynamic_joint_state_control.py  torque_control.py
src/rhex_description/: CMakeLists.txt
src/rhex_description/urdf/: accessories.xacro  (+3 more)
(+2017 files in other folders)
